[package]
name = "nyc-pulse-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
gtfs-rt = "0.5.0"
prost = "0.11"
bytes = "1.0"
log = "0.4"
env_logger = "0.10"
once_cell = "1.18"
parking_lot = "0.12"
