[package]
name = "nyc-pulse-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
nyc-pulse-backend = { path = "../backend" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
